# advent-of-code-2024

./: .gitignore  generate_day.py  pyproject.toml
day1/: puzzle.py  test_puzzle.py
day2/: puzzle.py  test_puzzle.py
day3/: puzzle.py  test_puzzle.py
day4/: puzzle.py  test_puzzle.py
day5/: puzzle.py  test_puzzle.py
day6/: puzzle.py  test_puzzle.py
day7/: puzzle.py  test_puzzle.py
day8/: puzzle.py  test_puzzle.py
template/: puzzle.py  test_puzzle.py
